--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,36 @@
   "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "framework": "docusaurus2"
+  "framework": "docusaurus2",
+  "functions": {
+    "build/api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "headers": [
+    {
+      "source": "/static/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*).html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/upload-interface",
+      "destination": "/upload-interface.html"
+    }
+  ]
 }
