--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mdx-js/react": "^3.0.1",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "3.6.1",
+    "framer-motion": "^12.23.12",
     "prism-react-renderer": "^2.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
